css/style.css
/****** General ***********/

* {
  font-family: "Raleway", sans-serif;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: none;
}

:root {
  --main-color: #0065fc;
  --filter-bg-color: #deebff;
  --border-color: #d9d9d9;
  --main-bg-color: #f2f2f2;
  --white: #ffffff;
}

/* Style de scrollbar */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background: #929496;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: #6e7072;
}

html {
  scroll-behavior: smooth;
}

.fa-solid {
  color: var(--main-color);
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
}

a {
  color: inherit;
  text-decoration: none;
}

.section-title {
  font-size: 22px;
  font-weight: 700;
  line-height: 25.83px;
  text-align: left;
}

.card-title {
  font-size: 16px;
}

.euro {
  font-weight: 700;
}

.neutral-star {
  color: var(--main-bg-color);
}

.filtersTitle,
.afficherPlus,
.footerTitle {
  font-size: 18px;
  font-weight: 700;
  line-height: 21.13px;
}

.info,
.footerLink {
  font-size: 16px;
  font-weight: 400;
  line-height: 18.78px;
}

/****** End General ***********/
/*******start style NavBar Top*******/
header {
  width: 100%;
  max-width: 1440px;
  height: 79px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.logoHeaderContainer {
  height: 100%;
  width: 161.09px;
  padding: 30px 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.logoHeaderContainer img {
  width: 61.09px;
  height: 19px;
}

nav {
  width: 344px;
  height: 35px;
  padding: 0px 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 68px;
}

.linkHeaderContainer {
  width: 244px;
  height: 100%;
  gap: 68px;
  display: flex;
}

.linkHeader {
  width: 113px;
  height: 35px;
  border-top: transparent solid 2px;
  transition: all 0.3s ease-in-out;
  align-content: flex-end;
  cursor: pointer;
}

.linkHeader:hover {
  border-top: var(--main-color) solid 2px;
  color: var(--main-color);
}

.linkHeader a {
  font-weight: 400;
  font-size: 16px;
  line-height: 18.78px;
  text-align: center;
}

/*******End style NavBar Top*******/

/******* Start Main ***********/
main {
  width: 100%;
  max-width: 1440px;
  height: 100%;
  padding: 0px 50px;
  display: flex;
  flex-direction: column;
  gap: 35px;
}

/* MainFirstSection*/
.MainFirstSection {
  max-width: 1340px;
  min-height: 281px;
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.titleContainer {
  width: 100%;
  height: 53px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.section-subtitle {
  font-size: 16px;
}

.searchContainer {
  width: 377px;
  height: 49px;
  border-radius: 15px;
  border: var(--main-bg-color) solid 1px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.searchContainer :first-child {
  width: 50px;
  height: 100%;
  background-color: var(--main-bg-color);
  border-radius: 15px 0px 0px 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.searchContainer i {
  font-size: 18px;
  color: black;
}

.searchInput {
  width: 100%;
  font-size: 18px;
  font-weight: 700;
  line-height: 21.13px;
  text-align: center;
  outline: none;
}

input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.searchButton,
.searchButtonMobile {
  width: 132px;
  height: 100%;
  color: var(--white);
  background-color: var(--main-color);
  border-radius: 0px 15px 15px 0px;
  border: var(--main-color) solid 1px;
  padding: 15px 16px;
  cursor: pointer;
  font-weight: 700;
  font-size: 18px;
  line-height: 21.13px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.searchButtonMobile {
  display: none;
}

.filtersContainer {
  width: 758px;
  height: 50px;
  display: flex;
  gap: 15px;
}

.filtersButtonsContainer {
  width: 100%;
  display: flex;
  gap: 15px;
}

.filtersTitle {
  align-self: center;
}

.filterButton {
  border-radius: 25px;
  border: 2px solid var(--border-color);
  padding: 4px 18px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  gap: 10px;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  background-color: transparent;
  font-weight: 700;
  font-size: 17px;
  line-height: 19.96px;
  height: 50px;
}

.filterButton:hover {
  background-color: var(--filter-bg-color);
}

.filterButton i {
  font-size: 22px;
  line-height: 22px;
}

.infoContainer {
  width: 100%;
  height: 24px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.infoContainer i {
  width: 24px;
  height: 24px;
  border: 1px solid var(--border-color);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

/****** MainSecondSection Hebergements And Populaires ***********/
.MainSecondSection {
  width: 100%;
  min-height: 614px;
  display: flex;
  justify-content: space-between;
  gap: 40px;
}

.MainSecondSection section {
  background-color: var(--main-bg-color);
  border-radius: 15px;
  padding: 30px;
}

/****** Hebergements ***********/
.hebergements {
  width: 871px;
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.hebergementsCardsContainer {
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  gap: 30px;
}

.hebergementsCardsContainer a {
  flex: 1 1 calc((100% - 60px) / 3);
  min-width: 150px;
  max-width: 250.33px;
}

.hebergementsOneCard {
  width: 100%;
  height: 100%;
  border-radius: 20px;
  padding: 0px 0px 15px 0px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 4px;
  box-shadow: 0px 3px 15px 0px #0000001a;
  background-color: var(--white);
  transition: all 0.3s ease;
}

.hebergementsOneCard:hover {
  transform: translate(0px, -4px);
}
/* ... */

